--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@
 /public/bundles/
 /var/
 /vendor/
+
+.env
+.env.local
+.env.local.php
+.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
